<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AboutActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_judul"
        android:textSize="40sp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/cardview_light_background"
        android:fontFamily="cursive"/>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="220dp"
                android:layout_height="240dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/fotojasitem">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/nama"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/aboutNama"
                        android:textSize="16sp"
                        android:fontFamily="casual"
                        android:textStyle="bold"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:fontFamily="casual"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/stanleymesa2001_gmail_com"
                        android:textSize="16sp"
                        android:fontFamily="casual"
                        android:textStyle="bold"/>

                </TableRow>


            </TableLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>